--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "private": true,
+  "main": "main.js",
+  "description": "Electron + NextJS example project",
   "scripts": {
-    "build": "next build",
-    "dev": "next dev",
+    "build": "next build && electron-builder",
+    "dev": "concurrently -n \"NEXT,ELECTRON\" -c \"yellow,blue\" --kill-others \"next dev\" \"electron .\"",
     "prettier": "prettier --write --ignore-unknown .",
     "prettier:check": "prettier --check --ignore-unknown .",
     "start": "next start",
@@ -17,6 +19,7 @@
     "autoprefixer": "10.4.15",
     "bcrypt": "^5.1.1",
     "clsx": "^2.0.0",
+    "electron-serve": "^1.3.0",
     "next": "^14.0.2",
     "next-auth": "^5.0.0-beta.4",
     "postcss": "8.4.31",
@@ -32,7 +35,10 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.14",
     "@vercel/style-guide": "^5.0.1",
+    "concurrently": "^8.2.2",
     "dotenv": "^16.3.1",
+    "electron": "^29.1.4",
+    "electron-builder": "^24.13.3",
     "eslint": "^8.52.0",
     "eslint-config-next": "^14.0.0",
     "eslint-config-prettier": "9.0.0",
