--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
   "private": true,
+  "name": "multi-platoform-nextjs-app",
+  "version": "1.0.0",
   "main": "main.js",
   "description": "Electron + NextJS example project",
+  "author": "Shinya Takara",
   "scripts": {
-    "build": "next build && electron-builder",
-    "dev": "concurrently -n \"NEXT,ELECTRON\" -c \"yellow,blue\" --kill-others \"next dev\" \"electron .\"",
+    "elebuild": "next build && electron-builder",
+    "build": "next build",
+    "dev": "next dev",
+    "eledev": "concurrently -n \"NEXT,ELECTRON\" -c \"yellow,blue\" --kill-others \"next dev\" \"electron .\"",
+    "devios": "next dev && npx cap run ios",
     "prettier": "prettier --write --ignore-unknown .",
     "prettier:check": "prettier --check --ignore-unknown .",
     "start": "next start",
@@ -12,6 +18,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@capacitor/android": "^5.7.3",
+    "@capacitor/core": "^5.7.3",
+    "@capacitor/ios": "^5.7.3",
     "@heroicons/react": "^2.0.18",
     "@tailwindcss/forms": "^0.5.7",
     "@types/node": "20.5.7",
@@ -20,17 +29,18 @@
     "bcrypt": "^5.1.1",
     "clsx": "^2.0.0",
     "electron-serve": "^1.3.0",
-    "next": "^14.0.2",
+    "next": "^14.1.4",
     "next-auth": "^5.0.0-beta.4",
     "postcss": "8.4.31",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "use-debounce": "^10.0.0",
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@capacitor/cli": "^5.7.3",
     "@types/bcrypt": "^5.0.1",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.14",
