--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "clsx": "^2.0.0",
     "next": "^14.0.2",
     "next-auth": "^5.0.0-beta.4",
+    "next-swagger-doc": "^0.4.0",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "swagger-ui-react": "^5.14.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "use-debounce": "^10.0.0",
