--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.0.0",
     "next": "^14.0.2",
     "next-auth": "^5.0.0-beta.4",
+    "next-pwa": "^5.6.0",
     "next-swagger-doc": "^0.4.0",
     "postcss": "8.4.31",
     "react": "18.2.0",
